# tbc-video-export

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  build_win_binary.py  flake.nix  pyproject.toml  tbc-video-export.json  tbc-video-export.py  test.mxf
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  config.yml
.github/workflows/: appimage.yml  build.yml  publish-test.yml  publish.yml  pyinstaller.yml  release.yml  test.yml  tests.yml
appimage/: entrypoint.sh  requirements.txt  tbc-video-export.appdata.xml  tbc-video-export.desktop
assets/: icon.icns
pyinstaller/: build_macos.py  build_windows.py
src/tbc_video_export/: __init__.py  __main__.py  program_state.py
src/tbc_video_export/common/: __init__.py  consts.py  enums.py  exceptions.py  file_helper.py  tbc_json_helper.py  video_system.py
src/tbc_video_export/common/utils/: __init__.py  ansi.py  files.py  flatlist.py  interrupts.py  log.py  metadata.py  strings.py  win32.py
src/tbc_video_export/config/: __init__.py  config.py  default.py  json.py  profile.py
src/tbc_video_export/opts/: __init__.py  opt_actions.py  opt_types.py  opt_validators.py  opts.py  opts_ffmpeg.py  opts_ldtools.py  opts_parser.py  opts_profile.py
src/tbc_video_export/process/: __init__.py  process.py  process_handler.py  process_state.py  progress_handler.py
src/tbc_video_export/process/parser/: __init__.py  export_state.py  parser.py  parser_factory.py  parser_ffmpeg.py  parser_ld_chroma_decoder.py  parser_ld_dropout_correct.py  parser_ld_export_metadata.py  parser_ld_process_efm.py  parser_ld_process_vbi.py
src/tbc_video_export/process/wrapper/: __init__.py  wrapper.py  wrapper_config.py  wrapper_ffmpeg.py  wrapper_group.py  wrapper_ld_chroma_decoder.py  wrapper_ld_dropout_correct.py  wrapper_ld_export_metadata.py  wrapper_ld_process_efm.py  wrapper_ld_process_vbi.py
src/tbc_video_export/process/wrapper/pipe/: __init__.py  pipe.py  pipe_dummy.py  pipe_factory.py  pipe_named_nt.py  pipe_named_nt_async.py  pipe_named_posix.py  pipe_os.py
tests/: README.md  __init__.py  conftest.py  test_config_profile.py  test_file_helper.py  test_output.py  test_tbc_json.py  test_utils.py  test_verbosity_opts.py  test_wrappers_ffmpeg.py  test_wrappers_ffmpeg_formats.py  test_wrappers_ffmpeg_hwaccel.py  test_wrappers_ldtools.py  test_wrappers_ntsc_composite.py  test_wrappers_ntsc_composite_ld.py  test_wrappers_ntsc_svideo.py  test_wrappers_pal_composite_.py  test_wrappers_pal_composite_ld.py  test_wrappers_pal_svideo.py  test_wrappers_palm_svideo.py
tests/files/: audio.flac  ntsc_composite.tbc  ntsc_composite.tbc.json  ntsc_composite.txt  ntsc_composite_ld.ac3  ntsc_composite_ld.efm  ntsc_composite_ld.pcm  ntsc_composite_ld.tbc  ntsc_composite_ld.tbc.json  ntsc_composite_ld.txt  ntsc_svideo.tbc  ntsc_svideo.tbc.json  ntsc_svideo.txt  ntsc_svideo_chroma.tbc  pal_composite.tbc  pal_composite.tbc.json  pal_composite.txt  pal_composite_ld.efm  pal_composite_ld.ffmetadata  pal_composite_ld.pcm  pal_composite_ld.scc  pal_composite_ld.tbc  pal_composite_ld.tbc.json  pal_composite_ld.txt  pal_svideo.tbc  pal_svideo.tbc.json  pal_svideo.txt  pal_svideo.vbi.json  pal_svideo_5.tbc.json  pal_svideo_chroma.tbc  palm_svideo.tbc  palm_svideo.tbc.json  palm_svideo.txt  palm_svideo_chroma.tbc  test.ffmetadata  test_profile.json
